[package]
name = "client-handle"
version = "0.2.0"
description = "A macro to generate client handles when using multithreaded / asynchronous code"
repository = "https://github.com/stedmeister/client-handle.git"
authors = ["stedmeister"]
readme = "README.md"
edition = "2021"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = ["client-handle-derive", "client-handle-core"]

[features]
tokio = ["dep:tokio"]

[dependencies]
client-handle-derive = { version = "0.2.0", path = "client-handle-derive" }
tokio = { version = "1.24.2", features = ["full"], optional = true }

[dev-dependencies]
trybuild = "1.0.73"
tokio = { version = "1.24.2", features = ["full"] }
