[package]
name = "client-handle-core"
version = "0.2.0"
description = "An internal helper library of client-handle"
repository = "https://github.com/stedmeister/client-handle.git"
authors = ["stedmeister"]
readme = "README.md"
edition = "2021"
license = "MIT"

[dependencies]
convert_case = "0.6.0"
proc-macro-error = "1.0.4"
proc-macro2 = "1.0.49"
quote = "1.0.23"
syn = { version = "1.0.107", features = ["full", "fold", "extra-traits"] }

[dev-dependencies]
colored-diff = "0.2.3"





