[package]
name = "client-handle-derive"
version = "0.1.0"
edition = "2021"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
client-handle-core = { version = "0.1.0", path = "../client-handle-core" }
proc-macro-error = "1.0.4"
proc-macro2 = "1.0.49"
