[package]
name = "client-handle-derive"
version = "0.2.0"
description = "An internal helper library of client-handle"
repository = "https://github.com/stedmeister/client-handle.git"
authors = ["stedmeister"]
readme = "README.md"
edition = "2021"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
client-handle-core = { version = "0.2.0", path = "../client-handle-core" }
proc-macro-error = "1.0.4"
proc-macro2 = "1.0.49"
